unpackaged/main/default/objects/Account/fields/Directional_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Directional_Purchase_Price__c</fullName>
    <formula>EBITDA__c*Est_Market_Multiple__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Directional Purchase Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>