unpackaged/main/default/objects/Account/fields/Discount_Information__c.field-meta.xml
<CustomField>
    <fullName>Discount_Information__c</fullName>
    <label>Discount Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>