unpackaged/main/default/objects/Account/fields/DUNS__c.field-meta.xml
<CustomField>
    <fullName>DUNS__c</fullName>
    <description>DUNS for this account</description>
    <inlineHelpText>DUNS for this account</inlineHelpText>
    <label>DUNS</label>
    <length>55</length>
    <type>Text</type>
</CustomField>