unpackaged/main/default/objects/Account/fields/EBITDA__c.field-meta.xml
<CustomField>
    <fullName>EBITDA__c</fullName>
    <label>EBITDA $</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>