unpackaged/main/default/objects/Account/fields/ECN_Rep__c.field-meta.xml
<CustomField>
    <fullName>ECN_Rep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ECN Rep</label>
    <type>Checkbox</type>
</CustomField>