unpackaged/main/default/objects/Account/fields/Electrical_Cable_Flexible_Conduits_Rep__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Cable_Flexible_Conduits_Rep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Electrical Cable &amp; Flexible Conduits Rep</label>
    <type>Checkbox</type>
</CustomField>