unpackaged/main/default/objects/Account/fields/Electrical_Invoices_Last_Month__c.field-meta.xml
<CustomField>
    <fullName>Electrical_Invoices_Last_Month__c</fullName>
    <description>Field used by Roll-up Helper to determine if account had Electrical sales in the prior month.  This field is then filtered in a Contact report to print a list of contacts for companies who had electrical sales last month.</description>
    <label>Electrical Invoices Last Month</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>