unpackaged/main/default/objects/Account/fields/EMEA_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>EMEA_Price_Book__c</fullName>
    <label>Price Book</label>
    <length>10</length>
    <type>Text</type>
</CustomField>