unpackaged/main/default/objects/Account/fields/Est_Market_Multiple__c.field-meta.xml
<CustomField>
    <fullName>Est_Market_Multiple__c</fullName>
    <description>User will enter value ranging from 1 to 20</description>
    <inlineHelpText>Enter value ranging from 1 to 20</inlineHelpText>
    <label>Est. Market Multiple</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>