unpackaged/main/default/objects/Account/fields/Fabrication_Assembly_ContractorRevenue__c.field-meta.xml
<CustomField>
    <fullName>Fabrication_Assembly_ContractorRevenue__c</fullName>
    <description>Contractor FYTD Revenue</description>
    <label>Fabrication/Assembly</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>