unpackaged/main/default/objects/Account/fields/Fruit__c.field-meta.xml
<CustomField>
    <fullName>Fruit__c</fullName>
    <label>Fruit</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apple</fullName>
            </value>
            <value>
                <fullName>Pear</fullName>
            </value>
            <value>
                <fullName>Cherry</fullName>
            </value>
            <value>
                <fullName>Strawberry</fullName>
            </value>
            <value>
                <fullName>Rasberry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>