unpackaged/main/default/objects/Account/fields/FY_EBITDA_Percent__c.field-meta.xml
<CustomField>
    <fullName>FY_EBITDA_Percent__c</fullName>
    <formula>EBITDA__c / AnnualRevenue</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FY EBITDA %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>