unpackaged/main/default/objects/Account/fields/Gross_Margin_30__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin_30__c</fullName>
    <description>2= Yes
1= Yes, but dependent on our synergies
0= No</description>
    <inlineHelpText>2= Yes
1= Yes, but dependent on our synergies
0= No</inlineHelpText>
    <label>Gross Margin &gt;30%</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>