unpackaged/main/default/objects/Account/fields/Gross_Margin__c.field-meta.xml
<CustomField>
    <fullName>Gross_Margin__c</fullName>
    <label>Gross Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>