unpackaged/main/default/objects/Account/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <formula>CommercientSF18__Infor_XA_Customer__r.CommercientSF18__BFUU40__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group</label>
    <type>Text</type>
</CustomField>