unpackaged/main/default/objects/Account/fields/Growth_Outlook__c.field-meta.xml
<CustomField>
    <fullName>Growth_Outlook__c</fullName>
    <description>2= &gt;Atkore Base Case Growth
1= Atkore Base Case Growth
0= &lt;Atkore Base Case Growth</description>
    <inlineHelpText>2= &gt;Atkore Base Case Growth
1= Atkore Base Case Growth
0= &lt;Atkore Base Case Growth</inlineHelpText>
    <label>Growth Outlook</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>