unpackaged/main/default/objects/Account/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <description>User an attach and image here</description>
    <inlineHelpText>User an attach and image here</inlineHelpText>
    <label>Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>