unpackaged/main/default/objects/Account/fields/IMC_ContractorRevenue__c.field-meta.xml
<CustomField>
    <fullName>IMC_ContractorRevenue__c</fullName>
    <description>Contractor FYTD Revenue</description>
    <label>IMC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>