unpackaged/main/default/objects/Account/fields/Industry_Notes__c.field-meta.xml
<CustomField>
    <fullName>Industry_Notes__c</fullName>
    <description>Text field where user can input further industry description.</description>
    <inlineHelpText>Please provide additional notes on industry where known e.g. sub-industry.</inlineHelpText>
    <label>Industry Notes</label>
    <type>TextArea</type>
</CustomField>