unpackaged/main/default/objects/Account/fields/Industry_Type__c.field-meta.xml
<CustomField>
    <fullName>Industry_Type__c</fullName>
    <label>Industry Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automation</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Electrical Wholesaler</fullName>
            </value>
            <value>
                <fullName>Hazardous</fullName>
            </value>
            <value>
                <fullName>Hygiene</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Utilities &amp; Power Generation</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Plumbing</fullName>
            </value>
            <value>
                <fullName>Mechanical</fullName>
            </value>
            <value>
                <fullName>HVAC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>