unpackaged/main/default/objects/Account/fields/Institution_Type__c.field-meta.xml
<CustomField>
    <fullName>Institution_Type__c</fullName>
    <label>Company Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Investment Bank</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Target</fullName>
            </value>
            <value>
                <fullName>Management Consultant</fullName>
            </value>
            <value>
                <fullName>Environmental</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Financial - Lender</fullName>
                <isActive>false</isActive>
                <label>Financial - Lender</label>
            </value>
            <value>
                <fullName>Financial - Private Equity Firm</fullName>
                <isActive>false</isActive>
                <label>Financial - Private Equity Firm</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>