unpackaged/main/default/objects/Account/fields/Is_Infor_XA_Customer_empty__c.field-meta.xml
<CustomField>
    <fullName>Is_Infor_XA_Customer_empty__c</fullName>
    <formula>ISBLANK( CommercientSF18__Infor_XA_Customer__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Infor XA Customer empty</label>
    <type>Checkbox</type>
</CustomField>