unpackaged/main/default/objects/Account/fields/ITDESC__c.field-meta.xml
<CustomField>
    <fullName>ITDESC__c</fullName>
    <description>ITDESC from INDUSTRY table based on the CMINDS field on DMCUSREC</description>
    <label>Industry</label>
    <length>30</length>
    <type>Text</type>
</CustomField>