unpackaged/main/default/objects/Account/fields/JDE_Agent_Number__c.field-meta.xml
<CustomField>
    <fullName>JDE_Agent_Number__c</fullName>
    <externalId>true</externalId>
    <label>JDE Agent Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>