unpackaged/main/default/objects/Account/fields/Key_Account__c.field-meta.xml
<CustomField>
    <fullName>Key_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This account has been identified by the Atkore Account Prioritization process as a Key Account.  Key Accounts require an account plan created for the current fiscal year</description>
    <inlineHelpText>This account has been identified by the Atkore Account Prioritization process as a Key Account.  Key Accounts require an account plan created for the current fiscal year</inlineHelpText>
    <label>Key Account</label>
    <type>Checkbox</type>
</CustomField>