unpackaged/main/default/objects/Account/fields/Key_Account_Agent__c.field-meta.xml
<CustomField>
    <fullName>Key_Account_Agent__c</fullName>
    <description>specify the agent number for whom this is a key account</description>
    <inlineHelpText>specify the agent number for whom this is a key account</inlineHelpText>
    <label>Key Account Agent</label>
    <length>25</length>
    <type>Text</type>
</CustomField>