unpackaged/main/default/objects/Account/fields/Key_Account_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Key_Account_Agent_Name__c</fullName>
    <description>agent name for key account</description>
    <inlineHelpText>agent name for key account</inlineHelpText>
    <label>Key Account Agent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>