unpackaged/main/default/objects/Account/fields/Key_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Key_Account_Name__c</fullName>
    <description>Key Account Name identifier to allow rolling key accounts up.</description>
    <inlineHelpText>Key Account Name identifier to allow rolling key accounts up.</inlineHelpText>
    <label>Key Account Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>