unpackaged/main/default/objects/Account/fields/Key_Account_Regions__c.field-meta.xml
<CustomField>
    <fullName>Key_Account_Regions__c</fullName>
    <inlineHelpText>In which Region does this Key Account exist</inlineHelpText>
    <label>Key Account Regions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AFC S. CENTRAL</fullName>
            </value>
            <value>
                <fullName>AFC EAST</fullName>
            </value>
            <value>
                <fullName>AFC House</fullName>
            </value>
            <value>
                <fullName>AFC KAFTECH</fullName>
            </value>
            <value>
                <fullName>AFC MIDWEST</fullName>
            </value>
            <value>
                <fullName>AFC SOUTHEAST</fullName>
            </value>
            <value>
                <fullName>AFC WEST</fullName>
            </value>
            <value>
                <fullName>ATC EAST</fullName>
            </value>
            <value>
                <fullName>ATC HOUSE</fullName>
            </value>
            <value>
                <fullName>ATC MIDWEST</fullName>
            </value>
            <value>
                <fullName>ATC S. CENTRAL</fullName>
            </value>
            <value>
                <fullName>ATC SOUTHEAST</fullName>
            </value>
            <value>
                <fullName>ATC WEST</fullName>
            </value>
            <value>
                <fullName>Barbed Tape</fullName>
            </value>
            <value>
                <fullName>Fence Midwest</fullName>
            </value>
            <value>
                <fullName>Fence Northeast</fullName>
            </value>
            <value>
                <fullName>Fence Ohio Valley</fullName>
            </value>
            <value>
                <fullName>Fence Southeast</fullName>
            </value>
            <value>
                <fullName>Fence West</fullName>
            </value>
            <value>
                <fullName>Mechanical 1</fullName>
            </value>
            <value>
                <fullName>Mechanical 2</fullName>
            </value>
            <value>
                <fullName>Mechanical 4</fullName>
            </value>
            <value>
                <fullName>Mechanical 5</fullName>
            </value>
            <value>
                <fullName>Mechanical 6</fullName>
            </value>
            <value>
                <fullName>Mechanical 8</fullName>
            </value>
            <value>
                <fullName>Sprinkler Latin America</fullName>
            </value>
            <value>
                <fullName>Sprinkler Midwest</fullName>
            </value>
            <value>
                <fullName>Sprinkler Northeast</fullName>
            </value>
            <value>
                <fullName>Sprinkler Ohio Valley</fullName>
            </value>
            <value>
                <fullName>Sprinkler Southeast</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>