unpackaged/main/default/objects/Account/fields/Key_Account_Regions_List__c.field-meta.xml
<CustomField>
    <fullName>Key_Account_Regions_List__c</fullName>
    <label>Key Account Regions List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>