unpackaged/main/default/objects/Account/fields/Konkore_ContractorRevenue__c.field-meta.xml
<CustomField>
    <fullName>Konkore_ContractorRevenue__c</fullName>
    <description>Contractor FYTD Revenue</description>
    <label>Konkore Fittings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>