unpackaged/main/default/objects/Account/fields/Kwik_Fit_ContractorRevenue__c.field-meta.xml
<CustomField>
    <fullName>Kwik_Fit_ContractorRevenue__c</fullName>
    <description>Contractor FYTD Revenue</description>
    <label>Kwik Fit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>