unpackaged/main/default/objects/Account/fields/Language_Key__c.field-meta.xml
<CustomField>
    <fullName>Language_Key__c</fullName>
    <label>Language Key</label>
    <length>6</length>
    <type>Text</type>
</CustomField>