unpackaged/main/default/objects/Account/fields/LBC_Compliance_Date__c.field-meta.xml
<CustomField>
    <fullName>LBC_Compliance_Date__c</fullName>
    <label>LBC Compliance Date</label>
    <type>Date</type>
</CustomField>