unpackaged/main/default/objects/Account/fields/Lead_Free__c.field-meta.xml
<CustomField>
    <fullName>Lead_Free__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Free</label>
    <type>Checkbox</type>
</CustomField>