unpackaged/main/default/objects/Account/fields/LEED_Letter__c.field-meta.xml
<CustomField>
    <fullName>LEED_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LEED Letter</label>
    <type>Checkbox</type>
</CustomField>