unpackaged/main/default/objects/Account/fields/Likelihood_of_sale_in_the_next_24_months__c.field-meta.xml
<CustomField>
    <fullName>Likelihood_of_sale_in_the_next_24_months__c</fullName>
    <description>1= Yes
0= No</description>
    <inlineHelpText>1= Yes
0= No</inlineHelpText>
    <label>Likelihood of sale in the next 24 months</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>