unpackaged/main/default/objects/Account/fields/Liquidtight_ContractorRevenue__c.field-meta.xml
<CustomField>
    <fullName>Liquidtight_ContractorRevenue__c</fullName>
    <description>Contractor FYTD Revenue</description>
    <label>Liquidtight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>