unpackaged/main/default/objects/Account/fields/Living_Building_Challenge_Compliant__c.field-meta.xml
<CustomField>
    <fullName>Living_Building_Challenge_Compliant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Living Building Challenge Compliant</label>
    <type>Checkbox</type>
</CustomField>