unpackaged/main/default/objects/Account/fields/Local_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Local_Rebate__c</fullName>
    <formula>Rebate__r.Local_Rebate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Local Rebate</label>
    <type>Text</type>
</CustomField>