unpackaged/main/default/objects/Account/fields/LTM_EBITDA__c.field-meta.xml
<CustomField>
    <fullName>LTM_EBITDA__c</fullName>
    <description>Tip: you can enter 100,000 as 100K, and when the record is saved, it will convert to whole dollars.</description>
    <label>LTM EBITDA $</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>