unpackaged/main/default/objects/Account/fields/LTM_EBITDA_percent__c.field-meta.xml
<CustomField>
    <fullName>LTM_EBITDA_percent__c</fullName>
    <formula>LTM_EBITDA__c / LTM_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LTM EBITDA %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>