unpackaged/main/default/objects/Account/fields/LTM_Revenue__c.field-meta.xml
<CustomField>
    <fullName>LTM_Revenue__c</fullName>
    <description>For M&amp;A</description>
    <inlineHelpText>Tip: you can enter 10,000,000 as 10M, and when the record is saved, it will convert to whole dollars.</inlineHelpText>
    <label>LTM Revenue</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>