unpackaged/main/default/objects/Account/fields/M_A_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>M_A_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>M&amp;A Opportunity</label>
    <referenceTo>M_A_Opportunity__c</referenceTo>
    <relationshipLabel>Company</relationshipLabel>
    <relationshipName>Companies</relationshipName>
    <type>Lookup</type>
</CustomField>