unpackaged/main/default/objects/Account/fields/Main_Category__c.field-meta.xml
<CustomField>
    <fullName>Main_Category__c</fullName>
    <description>Select the main category for this account.  NOTE:  Sales teams not be determined based on this value, it is only for ad-hoc groupings</description>
    <inlineHelpText>Select the main category for this account.  NOTE:  Sales teams not be determined based on this value, it is only for ad-hoc groupings</inlineHelpText>
    <label>Main Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Heritage</fullName>
            </value>
            <value>
                <fullName>Kaftech</fullName>
            </value>
            <value>
                <fullName>Mechanical</fullName>
            </value>
            <value>
                <fullName>Security Bollards</fullName>
            </value>
            <value>
                <fullName>Standard Pipe</fullName>
            </value>
            <value>
                <fullName>Telespar</fullName>
            </value>
            <value>
                <fullName>Traffic</fullName>
            </value>
            <value>
                <fullName>Unistrut</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>