unpackaged/main/default/objects/Account/fields/Main_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Main_Rebate__c</fullName>
    <formula>Rebate__r.Main_Rebate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Main Rebate</label>
    <type>Text</type>
</CustomField>