unpackaged/main/default/objects/Account/fields/Mechanical_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Mechanical_Tracking__c</fullName>
    <description>used to identify accounts for mechanical reports</description>
    <inlineHelpText>used to identify accounts for mechanical reports</inlineHelpText>
    <label>Mechanical Tracking</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Customer - Mechanical</fullName>
            </value>
            <value>
                <fullName>New Customer - Tectron</fullName>
            </value>
            <value>
                <fullName>Value Add Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>