unpackaged/main/default/objects/Account/fields/Mercury_Free__c.field-meta.xml
<CustomField>
    <fullName>Mercury_Free__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mercury Free</label>
    <type>Checkbox</type>
</CustomField>