unpackaged/main/default/objects/Account/fields/Metal_Framing_Fittings_ContractorRevenue__c.field-meta.xml
<CustomField>
    <fullName>Metal_Framing_Fittings_ContractorRevenue__c</fullName>
    <description>Contractor FYTD Revenue</description>
    <label>Metal Framing Fittings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>