unpackaged/main/default/objects/Account/fields/Metal_Framing_Rep__c.field-meta.xml
<CustomField>
    <fullName>Metal_Framing_Rep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Metal Framing Rep</label>
    <type>Checkbox</type>
</CustomField>