unpackaged/main/default/objects/Account/fields/My_Key_Account__c.field-meta.xml
<CustomField>
    <fullName>My_Key_Account__c</fullName>
    <description>check to see if the running user is listed on the Account as the Key account agent</description>
    <formula>IF( AND(NOT(ISBLANK($User.Salesperson_Number__c)),
        NOT(ISBLANK(Key_Account_Agent__c)),
        $User.Salesperson_Number__c = Key_Account_Agent__c), &quot;Y&quot;, &quot;N&quot;)</formula>
    <inlineHelpText>Value is &quot;Y&quot; if the running user is listed on the Account as the Key account agent</inlineHelpText>
    <label>My Key Account</label>
    <type>Text</type>
</CustomField>