unpackaged/main/default/objects/Account/fields/New_Customer_Mechanical_Oppty_Tons__c.field-meta.xml
<CustomField>
    <fullName>New_Customer_Mechanical_Oppty_Tons__c</fullName>
    <description>Roll up of Opportunity Tons where specified as New Customer - Mechanical</description>
    <inlineHelpText>Roll up of Opportunity Tons where specified as New Customer - Mechanical</inlineHelpText>
    <label>New Customer - Mechanical Oppty Tons</label>
    <summarizedField>Opportunity.Expected_Tons__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.Mechanical_Tracking__c</field>
        <operation>equals</operation>
        <value>New Customer - Mechanical</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>