unpackaged/main/default/objects/Account/fields/Non_Customer_Source__c.field-meta.xml
<CustomField>
    <fullName>Non_Customer_Source__c</fullName>
    <description>Will contain &quot;Dodge Report&quot; when non-customer is created from loading of Dodge Project data</description>
    <inlineHelpText>Will contain &quot;Dodge Report&quot; when non-customer is created from loading of Dodge Project data</inlineHelpText>
    <label>Non-Customer Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>