unpackaged/main/default/objects/Account/fields/Non_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>Non_Customer_Type__c</fullName>
    <label>Non-Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Architect</fullName>
            </value>
            <value>
                <fullName>Association</fullName>
            </value>
            <value>
                <fullName>Civil Engineer</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Consulting Engineer</fullName>
            </value>
            <value>
                <fullName>Customer Corporate Location</fullName>
            </value>
            <value>
                <fullName>Customer Division Location</fullName>
            </value>
            <value>
                <fullName>Customer Region Location</fullName>
            </value>
            <value>
                <fullName>Electrical Contractor</fullName>
            </value>
            <value>
                <fullName>Electrical Engineer</fullName>
            </value>
            <value>
                <fullName>Electrical Inspector</fullName>
            </value>
            <value>
                <fullName>End User</fullName>
            </value>
            <value>
                <fullName>EPC</fullName>
            </value>
            <value>
                <fullName>Fence Contractor</fullName>
            </value>
            <value>
                <fullName>General Contractor</fullName>
            </value>
            <value>
                <fullName>Industrial/MRO</fullName>
            </value>
            <value>
                <fullName>Landscape Engineer</fullName>
            </value>
            <value>
                <fullName>Mechanical Engineer</fullName>
            </value>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Parent Account</fullName>
            </value>
            <value>
                <fullName>Partners/Other</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Sales Agency</fullName>
            </value>
            <value>
                <fullName>Site Owners</fullName>
            </value>
            <value>
                <fullName>Sprinkler Contractor</fullName>
            </value>
            <value>
                <fullName>Structural Engineer</fullName>
            </value>
            <value>
                <fullName>Utility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>