unpackaged/main/default/objects/Account/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>For Notes concerning this Account (Currently only used for M&amp;A)</description>
    <inlineHelpText>For notes concerning this Account</inlineHelpText>
    <label>Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>