unpackaged/main/default/objects/Account/fields/Options_3TG__c.field-meta.xml
<CustomField>
    <fullName>Options_3TG__c</fullName>
    <label>3TG Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Contains_3TG__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tin</fullName>
            </value>
            <value>
                <fullName>Tantalum</fullName>
            </value>
            <value>
                <fullName>Tungsten</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>