unpackaged/main/default/objects/Account/fields/Other_Raceway_ContractorRevenue__c.field-meta.xml
<CustomField>
    <fullName>Other_Raceway_ContractorRevenue__c</fullName>
    <description>Contractor FYTD Revenue</description>
    <label>Other Raceway</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>