unpackaged/main/default/objects/Account/fields/PGM_AFC_Member__c.field-meta.xml
<CustomField>
    <fullName>PGM_AFC_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This account is a member of an AFC Price Group</description>
    <inlineHelpText>This account is a member of an AFC Price Group</inlineHelpText>
    <label>Member of AFC Price Group</label>
    <type>Checkbox</type>
</CustomField>