unpackaged/main/default/objects/Account/fields/PGM_ATC_Member__c.field-meta.xml
<CustomField>
    <fullName>PGM_ATC_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This account is a member of an ATC price group</description>
    <inlineHelpText>This account is a member of an ATC price group</inlineHelpText>
    <label>Member of ATC Price Group</label>
    <type>Checkbox</type>
</CustomField>