unpackaged/main/default/objects/Account/fields/PGM_CRC_Member__c.field-meta.xml
<CustomField>
    <fullName>PGM_CRC_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This account is a member of a CRC Price Group.</description>
    <inlineHelpText>This account is a member of a CRC Price Group.</inlineHelpText>
    <label>Member of CRC Price Group</label>
    <type>Checkbox</type>
</CustomField>