unpackaged/main/default/objects/Account/fields/PGM_KON_Member__c.field-meta.xml
<CustomField>
    <fullName>PGM_KON_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This account is a member of an KON Price Group.</description>
    <inlineHelpText>This account is a member of an KON Price Group.</inlineHelpText>
    <label>Member of KON Price Group</label>
    <type>Checkbox</type>
</CustomField>