unpackaged/main/default/objects/Account/fields/PGM_PPC_Member__c.field-meta.xml
<CustomField>
    <fullName>PGM_PPC_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This account is a member of a PPC Price Group</description>
    <inlineHelpText>This account is a member of a PPC Price Group</inlineHelpText>
    <label>Member of PPC Price Group</label>
    <type>Checkbox</type>
</CustomField>